@startuml
'https://plantuml.com/class-diagram

title Diagramme gameLaby

interface Jeu {
    +update(double secondes, Clavier clavier)
    +init()
    +etreFini()
    }

interface DessinJeu {
    +dessinerJeu (Jeu jeu, Canvas canvas)
    }



class LabyDessin{
    +TAILLE_RECTANGLE : int
    +dessinerJeu(Jeu jeu, Canvas canvas)
}

class LabyJeu{
    -laby : Labyrinthe
    +LabyJeu()
    +update(double secondes, Clavier clavier)
    +init
    +etreFini : boolean
    +getLabi : Labyrinthe
    }

class Position{
    -x : int
    -y : int
    +Position(int dx, int dy)
    +etrePresent(int dx, int dy) : boolean
    +getX() : int
    +getY() : int
    +setX()
    +setY()
    }

abstract Case {
    - traversable : boolean
    - amorce : boolean
    +Case(int x, int y)
    +faireEffet(Perso p)
    +getType()
    +isTraversable()
    +isAmorce()
    +changerAmorce()
    }


class Perso {
    -pv : int
    +Perso(int x, int y, int pv)
    +subirDegats(int deg)
    +etreMort() : boolean
    +getPv() : int
}

class Labyrinthe{
    +MUR : char
    +PJ : char
    +DECLENCHEUR : char
    +PIEGEE : char
    +VIDE : char
    +DEGAT_CASE_PIEGEE : int
    +HAUT = String
    +BAS = String
    +GAUCHE : String
    +DROITE : String
    -case : Case[][]
    -caseEffet : List<Case>
    +getSuivant(int x, int y, String action) : int
    +Labyrinthe(String nom)
    +deplacerPerso(String action)
    +etreFini() : boolean
     +getLengthY() : int
     +getLength() : int
     +getPj() : Perso
     +getCase(int x, int y) : Case
     +getCeseEffet();
    }

class CaseVide {
    +CaseVide(int x, int y)
    +faireEffet(Perso p)
    +getType()
}

class CaseMur {
    +CaseMur(int x, int y)
    +faireEffet(Perso p)
    +getType()
}

class CaseDeclencheur {
    +CaseDeclencheur(int x, int y)
    +faireEffet(Perso p)
    +getType()



}

class CasePiegee {
    -degats : int
    +CasePiegee(int x, int y, boolean amorce)
    +faireEffet(Perso p)
    +getType()



}


DessinJeu <|.. LabyDessin
Jeu <|.. LabyJeu
Position <|-- Perso
Position <|-- Case
Labyrinthe "1" --> "1" Perso : +pj
Labyrinthe "1" --> "*" Case : +cases
LabyDessin ..> LabyJeu : uses
LabyJeu "1" --> "1" Labyrinthe : laby
Case <|-- CaseVide
Case <|-- CaseMur
Case <|-- CasePiegee
Case <|-- CaseDeclencheur


@enduml